@@ -3,6 +3,8 @@
 	* Cleaned and organized the minibox-shell directory
 	* Switched to linenoise which offered a very great size reduction solution.
 	* Added Makefile to Minibox SHell source.
+	* Changed ls to list in standard order
+	* Applied bugfixes to minibox.c source
 
 7/12/2024 V0.1.0pre7 - pre-release version 7 (stable)
 	* Reached a massive milestone by creating a shell example
